examples/sample-product-chart/chart-test/reports/run-full-bench-20260609-085346/scenario-gateway-api-istio-ingress-20260609-094007/artifacts/manifests/gatewayclasses.yaml
apiVersion: v1
items:
- apiVersion: gateway.networking.k8s.io/v1
  kind: GatewayClass
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"gateway.networking.k8s.io/v1","kind":"GatewayClass","metadata":{"annotations":{},"name":"istio"},"spec":{"controllerName":"istio.io/gateway-controller"}}
    creationTimestamp: "2026-06-09T13:40:42Z"
    generation: 1
    name: istio
    resourceVersion: "645"
    uid: d6cb3fdf-77eb-4a02-a0f6-0ee5719eec40
  spec:
    controllerName: istio.io/gateway-controller
    description: The default Istio GatewayClass
  status:
    conditions:
    - lastTransitionTime: "2026-06-09T13:40:42Z"
      message: Handled by Istio controller
      observedGeneration: 1
      reason: Accepted
      status: "True"
      type: Accepted
- apiVersion: gateway.networking.k8s.io/v1
  kind: GatewayClass
  metadata:
    creationTimestamp: "2026-06-09T13:40:42Z"
    generation: 1
    name: istio-remote
    resourceVersion: "627"
    uid: e05b0a61-72a4-45bc-a8f0-b38b06b7c969
  spec:
    controllerName: istio.io/unmanaged-gateway
    description: Remote to this cluster. Does not deploy or affect configuration.
  status:
    conditions:
    - lastTransitionTime: "2026-06-09T13:40:42Z"
      message: Handled by Istio controller
      observedGeneration: 1
      reason: Accepted
      status: "True"
      type: Accepted
kind: List
metadata:
  resourceVersion: ""
